--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserRecentActivity.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/UserRecentActivity.cshtml
@@ -1,78 +1,68 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>{Forum Name} - {Username}'s Recent Activity</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-	@RenderPage("~/Views/RoughDraft/partials/shared/Styles.cshtml")
-	@RenderPage("~/Views/RoughDraft/partials/shared/Scripts.cshtml")
-</head>
-<body>
-	@RenderPage("~/Views/RoughDraft/partials/TopBar.cshtml")
-	<div class="container-fluid">
-		@RenderPage("~/Views/RoughDraft/partials/Sidebar.cshtml")
-		<div class="content">
-			<ul class="breadcrumb">
-				<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
-				<li><a href="@Url.Action("AllUsers")">All Users</a> <span class="divider">/</span></li>
-				<li><a href="@Url.Action("User")">{Username}</a> <span class="divider">/</span></li>
-				<li class="active">Recent Activity</li>
-			</ul>
-			<h1>
-				{Username}'s Recent Activity</h1>
-			<hr />
-			@RenderPage("~/Views/RoughDraft/partials/UserProfileTabs.cshtml")
-			@for (var i = 1; i < 11; i++)
-	 {
-				<div class="row">
-					<div class="span10">
-						<h3>
-							<a href="@Url.Action("Post")">{Post Title}</a></h3>
-						<p>
-							Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-							dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-								font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
-									Category</a></span></p>
-						<div class="row">
-							<div class="span3 offset7" style="padding-top: 7px; text-align: right; font-size: smaller;">
-								<img src="../../Themes/default/images/balloon-white.png" /> <a href="#">999 comments</a></div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="span10 offset1">
-						<hr />
-					</div>
-				</div>
-				
-		 if (i % 2 == 0)
-		 {
-				
-				<div class="row">
-					<div class="span10">
-						<p>
-							Comment on post: <strong style="font-size: 18px"><a href="@Url.Action("Post")">{Post Title}</a></strong>.
-						</p>
-						<p>
-							Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
-							dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
-								font-size: smaller;"><em>12:59 PM 12/31/2011</em></span></p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="span10 offset1">
-						<hr />
-					</div>
-				</div>
-		 
-		 }
+﻿@{
+	ViewBag.Title = "{Forum Name} - {Username}'s Recent Activity";
+	Layout = "~/Views/RoughDraft/Shared/_ForumLayout.cshtml";
+}
+<ul class="breadcrumb">
+	<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li><a href="@Url.Action("AllUsers")">All Users</a> <span class="divider">/</span></li>
+	<li><a href="@Url.Action("User")">{Username}</a> <span class="divider">/</span></li>
+	<li class="active">Recent Activity</li>
+</ul>
+<h1>{Username}'s Recent Activity</h1>
+<hr />
+@RenderPage("~/Views/RoughDraft/partials/UserProfileTabs.cshtml")
+@for (var i = 1; i < 11; i++)
+{
+	<div class="row">
 
-	 }
-			<footer>
-				<p>&copy; Newco 2011-12</p>
-			</footer>
+		<div class="span10">
+			<h3><a href="@Url.Action("Post")">{Post Title}</a></h3>
+			<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
+				dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
+					font-size: smaller;"><em>12:59 PM 12/31/2011</em> in <a href="@Url.Action("Category")" class="label">
+						Category</a></span></p>
+
+			<div class="row">
+
+				<div class="span3 offset7" style="padding-top: 7px; text-align: right; font-size: smaller;">
+					<img src="../../Themes/default/images/balloon-white.png" />
+					<a href="#">999 comments</a></div>
+
+			</div>
+
 		</div>
+
 	</div>
-</body>
-</html>
+	<div class="row">
+
+		<div class="span10 offset1">
+			<hr />
+		</div>
+
+	</div>
+				
+	if (i % 2 == 0)
+	{
+				
+	<div class="row">
+
+		<div class="span10">
+			<p>Comment on post: <strong style="font-size: 18px"><a href="@Url.Action("Post")">
+				{Post Title}</a></strong>. </p>
+			<p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis
+				dapibus posuere. Etiam porta sem malesuada magna mollis euismod. &mdash; <span style="text-align: right;
+					font-size: smaller;"><em>12:59 PM 12/31/2011</em></span></p>
+		</div>
+
+	</div>
+	<div class="row">
+
+		<div class="span10 offset1">
+			<hr />
+		</div>
+
+	</div>
+		 
+	}
+
+}
