--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/AllUsers.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/AllUsers.cshtml
@@ -1,67 +1,45 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>{Forum Name} - All Users</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-	@RenderPage("~/Views/RoughDraft/partials/shared/Styles.cshtml")
-	@RenderPage("~/Views/RoughDraft/partials/shared/Scripts.cshtml")
-</head>
-<body>
-	@RenderPage("~/Views/RoughDraft/partials/TopBar.cshtml")
-	<div class="container-fluid">
-		@RenderPage("~/Views/RoughDraft/partials/Sidebar.cshtml")
-		<div class="content">
-			<ul class="breadcrumb">
-				<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
-				<li class="active">All Users</li>
-			</ul>
-			<h1>All Users</h1>
-			<table class="zebra-striped">
-				<tbody>
-					@for (var i = 1; i < 11; i++)
-		 {
-						<tr>
-							<td>
-								@i
-							</td>
-							<td>
-								<a href="@Url.Action("User")">
-									<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=40" /></a>
-							</td>
-							<td>
-								<h3>
-									<a href="@Url.Action("User")">{Username}</a></h3>
-							</td>
-							<td>
-								35 posts, 45 comments, 5 favorites
-							</td>
-							<td style="text-align: right;">
-								<a href="#">Add as Friend</a>
-							</td>
-						</tr>
-		 }
-				</tbody>
-			</table>
-			<hr />
-			<div class="pagination">
-				<ul>
-					<li class="prev disabled"><a href="#">&larr; Previous</a></li>
-					<li><a href="#">1</a></li>
-					<li class="active"><a href="#">2</a></li>
-					<li><a href="#">3</a></li>
-					<li class="disabled"><a href="#">...</a></li>
-					<li><a href="#">45</a></li>
-					<li><a href="#">46</a></li>
-					<li><a href="#">47</a></li>
-					<li class="next"><a href="#">Next &rarr;</a></li>
-				</ul>
-			</div>
-			<footer>
-				<p>&copy; Newco 2011-12</p>
-			</footer>
-		</div>
-	</div>
-</body>
-</html>
+﻿@{
+	ViewBag.Title = "{Forum Name} - All Users";
+	Layout = "~/Views/RoughDraft/Shared/_ForumLayout.cshtml";
+}
+<ul class="breadcrumb">
+	<li><a href="@Url.Action("Home")">{Forum Name} Home</a> <span class="divider">/</span></li>
+	<li class="active">All Users</li>
+</ul>
+<h1>All Users</h1>
+<table class="zebra-striped">
+	<tbody>
+		@for (var i = 1; i < 11; i++)
+	{
+			<tr>
+				<td>
+					@i
+				</td>
+				<td><a href="@Url.Action("User")">
+					<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=40" /></a>
+				</td>
+				<td>
+					<h3><a href="@Url.Action("User")">{Username}</a></h3>
+				</td>
+				<td>35 posts, 45 comments, 5 favorites </td>
+				<td style="text-align: right;"><a href="#">Add as Friend</a> </td>
+			</tr>
+	}
+	</tbody>
+</table>
+<hr />
+
+<div class="pagination">
+	<ul>
+		<li class="prev disabled"><a href="#">&larr; Previous</a></li>
+		<li><a href="#">1</a></li>
+		<li class="active"><a href="#">2</a></li>
+		<li><a href="#">3</a></li>
+		<li class="disabled"><a href="#">...</a></li>
+		<li><a href="#">45</a></li>
+		<li><a href="#">46</a></li>
+		<li><a href="#">47</a></li>
+		<li class="next"><a href="#">Next &rarr;</a></li>
+	</ul>
+</div>
+
