added new post modal

--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopBar.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/TopBar.cshtml
@@ -11,7 +11,7 @@
 			<form action="" class="pull-right">
 				<input class="input-small" type="text" placeholder="Username">
 				<input class="input-small" type="password" placeholder="Password">
-				<button class="btn primary" type="submit">Sign in</button> <button data-controls-modal="registration-modal" data-backdrop="static" href="#" class="btn small">Register account</button>
+				<button class="btn primary" type="submit">Sign in</button> <button data-controls-modal="registration-modal" data-backdrop="static" class="btn small">Register account</button>
 			</form>
 		</div>
 	</div>
