--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/NewPost.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/NewPost.cshtml
@@ -1,3 +1,46 @@
 ﻿<div id="newPost" style="text-align: center;">
-		<input type="button" class="btn medium primary" value="Create Post" />
+	<input type="button" data-controls-modal="newPost-modal" data-backdrop="static" class="btn medium primary"
+		value="Create Post" />
 </div>
+
+<div class="modal hide fade" style="display: none;" id="newPost-modal">
+
+	<div class="modal-header">
+		<a href="#" class="close">&times;</a>
+		<h3>New Post</h3>
+	</div>
+
+	<div class="modal-body">
+		<form>
+		<fieldset>
+
+			<div class="clearfix error">
+				<label for="username">Title</label>
+
+				<div class="input">
+					<input class="large" name="username" size="30" type="text" value="Post title sucks!" />
+					<span class="help-inline">Please don't use profanity in post titles.</span>
+				</div>
+
+			</div>
+
+			<div class="clearfix">
+				<label for="email">Post</label>
+
+				<div class="input">
+					<textarea class="xlarge" id="newReplyBody" name="newReplyBody" rows="6"></textarea>
+				</div>
+
+			</div>
+
+		</fieldset>
+		</form>
+	</div>
+
+	<div class="modal-footer">
+		<button class="btn primary">Publish Post</button>
+		<a href="#" class="btn secondary">Cancel</a>
+	</div>
+
+</div>
+
