--- a/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/NewPost.cshtml
+++ b/assets/templates/forum-skeleton/ForumSkeletonMvc/Views/RoughDraft/partials/NewPost.cshtml
@@ -14,12 +14,11 @@
 		<form>
 		<fieldset>
 
-			<div class="clearfix error">
+			<div class="clearfix">
 				<label for="username">Title</label>
 
 				<div class="input">
-					<input class="large" name="username" size="30" type="text" value="Post title sucks!" />
-					<span class="help-inline">Please don't use profanity in post titles.</span>
+					<input class="large" name="username" size="30" type="text" value="Your Post Title" />
 				</div>
 
 			</div>
@@ -29,6 +28,7 @@
 
 				<div class="input">
 					<textarea class="xlarge" id="newReplyBody" name="newReplyBody" rows="6"></textarea>
+					<span class="help-block">Please be civil.</span>
 				</div>
 
 			</div>
