--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -60,7 +60,7 @@
 	</header>
 
 	<section>
-		<p style="float: left">Setting a forum to active means it will be awarded to users when the trigger threshold is satisfied.</p>
+		<p style="float: left">View, add, edit and activate forum badges</p>
 		<a href="#" style="float:right" class="button-link blue" id="create-badge">Add Badge</a>
 	</section>
 
