--- a/apps/AdminComposite/Views/Category/List.cshtml
+++ b/apps/AdminComposite/Views/Category/List.cshtml
@@ -58,7 +58,7 @@
 	</header>
 
 	<section>
-		<p style="float:left">View, edit, activate and create categories for this forum</p>
+		<p style="float:left">View, add, edit, and activate categories for this forum</p>
 		<a href="#" style="float:right" class="button-link blue" id="create-category">Add Category</a>
 	</section>
 	
