--- a/apps/AdminComposite/Views/Content/List.cshtml
+++ b/apps/AdminComposite/Views/Content/List.cshtml
@@ -73,11 +73,11 @@
 
 <article>
 	<header>
-		<h2>Content for Forum</h2>
+		<h2>Manage Forum Content</h2>
 	</header>
 
 	<section>
-		<p style="float:left">Manage content for this forum</p>
+		<p style="float:left">View, add, edit, and activate content for this forum</p>
 		<a style="float:right" href="#" class="button-link blue" id="add-content">Add Content</a>
 	</section>
 
