--- a/apps/AdminComposite/Views/Organization/Details.cshtml
+++ b/apps/AdminComposite/Views/Organization/Details.cshtml
@@ -100,7 +100,7 @@
 
 	<form action="#">
 		<fieldset>
-			<legend>Organization Details</legend>
+			<legend>Details</legend>
 
 			<dl id="organization-details">
 				<dt><label for="organization-name">Organization Name</label></dt>
