--- a/apps/AdminComposite/Views/UserProfile/List.cshtml
+++ b/apps/AdminComposite/Views/UserProfile/List.cshtml
@@ -92,7 +92,7 @@
 		</header>
 
 		<section>
-			<p style="float:left">Manage and Invite users to this forum</p>
+			<p style="float:left">View, invite and block users to this forum</p>
 			<a href="#" style="float:right" class="button-link blue" id="invite-users">Invite Users</a>
 		</section>
 		
