--- a/apps/AdminComposite/Views/Organization/Users.cshtml
+++ b/apps/AdminComposite/Views/Organization/Users.cshtml
@@ -36,11 +36,11 @@
 
 <article>
 	<header>
-		<h2>Manage Forum Administrators</h2>
+		<h2>Manage Organization Users</h2>
 	</header>
 
 	<section>
-		<p style="float: left">Manage forum administrators</p>
+		<p style="float: left">View, add and edit organization users</p>
 		<a href="#" style="float:right" class="button-link blue" id="add-user">Add User</a>
 	</section>
 
@@ -81,6 +81,6 @@
 	<ul id="breadcrumbs">
 		<li><a href="@Url.Action("Index", "Dashboard")" title="Back to Homepage">Home</a></li>
 		<li>@ViewBag.OrganizationName</li>
-		<li>Manage Forum Administrators</li>
+		<li>Manage Organization Users</li>
 	</ul>
 }
